tests/parser/tests/cases/should_fail/malformed_list_literal/case.stderr
error: encountered unclosed delimiter `[`, add a `]` after the inner expression
 --> $DIR/case.hash:1:5
1 |   k = [1,
  |       ^ here
